# internal/providers/controller/http/routes/v1/providers.go
@@ -1,8 +1,10 @@
 package v1
 
 import (
+	"errors"
 	"fmt"
 	"net/http"
+	"time"
 
 	"github.com/classydevv/fulfillment/internal/providers/entity"
 	"github.com/classydevv/fulfillment/internal/providers/usecase"
@@ -23,16 +25,18 @@ func NewProviderRoutes(apiGroup fiber.Router, uc usecase.Provider, l logger.Inte
 	{
 		providerGroup.Post("", r.providerCreate)
 		providerGroup.Get("", r.providerGetAll)
+		providerGroup.Put("/:providerId", r.providerUpdate)
+		providerGroup.Delete("/:providerId", r.providerDelete)
 	}
 }
 
 type providerCreateRequest struct {
-	Id   entity.ProviderId `json:"id" validate:"required" example:"kuper"`
-	Name string            `json:"name" validate:"required" example:"Купер"`
+	ProviderId entity.ProviderId `json:"provider_id" validate:"required" example:"kuper"`
+	Name       string            `json:"name" validate:"required" example:"Купер"`
 }
 
 type providerCreateResponse struct {
-	Id entity.ProviderId `json:"id"`
+	ProviderId entity.ProviderId `json:"provider_id" example:"kuper"`
 }
 
 // @Summary     Create a new provider
@@ -41,42 +45,52 @@ type providerCreateResponse struct {
 // @Tags  	    provider
 // @Accept      json
 // @Produce     json
-// @Param       request body providerCreateRequest true "Provider parameters"
-// @Success     200 {object} providerCreateResponse
+// @Param       body body providerCreateRequest true "Provider create parameters"
+// @Success     201 {object} providerCreateResponse
 // @Failure     400 {object} responseError
+// @Failure     409 {object} responseError
 // @Failure     500 {object} responseError
 // @Router      /providers [post]
 func (r *providerRoutes) providerCreate(ctx *fiber.Ctx) error {
-	var request providerCreateRequest
+	var requestBody providerCreateRequest
 
-	if err := ctx.BodyParser(&request); err != nil {
+	if err := ctx.BodyParser(&requestBody); err != nil {
 		r.l.Error(fmt.Errorf("http - v1 - providerCreate - bodyParser: %w", err))
 
 		return errorResponse(ctx, http.StatusBadRequest, "bad request")
 	}
 
-	if err := r.v.Struct(request); err != nil {
+	if err := r.v.Struct(requestBody); err != nil {
 		r.l.Error(fmt.Errorf("http - v1 - providerCreate - validate: %w", err))
 
 		return errorResponse(ctx, http.StatusBadRequest, "bad request")
 	}
 
 	providerId, err := r.uc.Create(ctx.UserContext(), entity.Provider{
-		Id:   request.Id,
-		Name: request.Name,
+		ProviderId: requestBody.ProviderId,
+		Name:       requestBody.Name,
 	})
 	if err != nil {
 		r.l.Error(fmt.Errorf("http - v1 - providerCreate - uc.Save: %w", err))
 
+		if errors.Is(err, entity.ErrAlreadyExists) {
+			return errorResponse(ctx, http.StatusConflict, fmt.Sprintf("%s: %s", requestBody.ProviderId, entity.ErrAlreadyExists.Error()))
+		}
+
 		return errorResponse(ctx, http.StatusInternalServerError, "provider database problems")
 	}
 
-	return ctx.Status(http.StatusOK).JSON(providerCreateResponse{providerId})
+	return ctx.Status(http.StatusCreated).JSON(providerCreateResponse{providerId})
 }
 
-type providerListAllResponse struct {
-	Providers []entity.Provider `json:"providers"`
+type providerEntityResponse struct {
+	ProviderId entity.ProviderId `json:"provider_id" example:"kuper"`
+	Name       string            `json:"name" example:"Купер"`
+	CreatedAt  time.Time         `json:"created_at" example:"2025-05-08T06:07:14.810915Z"`
+	UpdatedAt  time.Time         `json:"updated_at" example:"2025-05-08T06:07:14.810915Z"`
 }
+
+type providerListAllResponse []providerEntityResponse
 
 // @Summary     List all providers
 // @Description List all available providers registered in the system
@@ -95,5 +109,109 @@ func (r *providerRoutes) providerGetAll(ctx *fiber.Ctx) error {
 		return errorResponse(ctx, http.StatusInternalServerError, "provider database problems")
 	}
 
-	return ctx.Status(http.StatusOK).JSON(providerListAllResponse{providers})
+	providersEntityResponse := make([]providerEntityResponse, len(providers))
+
+	for i, p := range providers {
+		providersEntityResponse[i] = providerEntityResponse(p)
+	}
+
+	return ctx.Status(http.StatusOK).JSON(providerListAllResponse(providersEntityResponse))
+}
+
+type paramProviderId entity.ProviderId
+
+type providerUpdateRequest struct {
+	Name string `json:"name" example:"Купер"`
+}
+
+type providerUpdateResponse providerEntityResponse
+
+// @Summary     Update a provider
+// @Description Updates a delivery provider
+// @ID          providerUpdate
+// @Tags  	    provider
+// @Accept      json
+// @Produce     json
+// @Param       providerId path string true "Provider ID"
+// @Param       body body providerUpdateRequest true "Provider update parameters"
+// @Success     200 {object} providerUpdateResponse
+// @Failure     400 {object} responseError
+// @Failure     404 {object} responseError
+// @Failure     500 {object} responseError
+// @Router      /providers/{providerId} [put]
+func (r *providerRoutes) providerUpdate(ctx *fiber.Ctx) error {
+	var providerId = paramProviderId(ctx.Params("providerId"))
+	if providerId == "" {
+		r.l.Error(fmt.Errorf("http - v1 - providerUpdate - providerId not provided"))
+
+		return errorResponse(ctx, http.StatusBadRequest, "bad request")
+	}
+
+	var requestBody providerUpdateRequest
+	ctx.Body()
+	if err := ctx.BodyParser(&requestBody); err != nil {
+		r.l.Error(fmt.Errorf("http - v1 - providerUpdate - bodyParser: %w", err))
+
+		return errorResponse(ctx, http.StatusBadRequest, "bad request")
+	}
+
+	if err := r.v.Struct(requestBody); err != nil {
+		r.l.Error(fmt.Errorf("http - v1 - providerUpdate - validate: %w", err))
+
+		return errorResponse(ctx, http.StatusBadRequest, "bad request")
+	}
+
+	providerUpdated, err := r.uc.Update(ctx.UserContext(),
+		entity.ProviderId(providerId),
+		entity.Provider{
+			Name: requestBody.Name,  // TODO: do not update if field "name" is not passed
+		})
+	if err != nil {
+		r.l.Error(fmt.Errorf("http - v1 - providerUpdate - uc.Update: %w", err))
+
+		if errors.Is(err, entity.ErrNotFound) {
+			return errorResponse(ctx, http.StatusNotFound, fmt.Sprintf("%s: %s", providerId, entity.ErrNotFound.Error()))
+		}
+
+		return errorResponse(ctx, http.StatusInternalServerError, "provider database problems")
+	}
+
+	return ctx.Status(http.StatusOK).JSON(providerUpdateResponse(*providerUpdated))
+}
+
+// type providerDeleteResponse struct{}
+
+// @Summary     Delete a provider
+// @Description Deletes a delivery provider
+// @ID          providerDelete
+// @Tags  	    provider
+// @Accept      json
+// @Produce     json
+// @Param       providerId path string true "Provider ID"
+// @Success     204
+// @Failure     400 {object} responseError
+// @Failure     404 {object} responseError
+// @Failure     500 {object} responseError
+// @Router      /providers/{providerId} [delete]
+func (r *providerRoutes) providerDelete(ctx *fiber.Ctx) error {
+	var providerId = paramProviderId(ctx.Params("providerId"))
+	if providerId == "" {
+		r.l.Error(fmt.Errorf("http - v1 - providerDelete - providerId not provided"))
+
+		return errorResponse(ctx, http.StatusBadRequest, "bad request")
+	}
+
+	err := r.uc.Delete(ctx.UserContext(), entity.ProviderId(providerId))
+
+	if err != nil {
+		r.l.Error(fmt.Errorf("http - v1 - providerDelete - uc.Delete: %w", err))
+
+		if errors.Is(err, entity.ErrNotFound) {
+			return errorResponse(ctx, http.StatusNotFound, fmt.Sprintf("%s: %s", providerId, entity.ErrNotFound.Error()))
+		}
+
+		return errorResponse(ctx, http.StatusInternalServerError, "provider database problems")
+	}
+
+	return ctx.SendStatus(http.StatusNoContent)
 }
