# internal/providers/entity/provider.go
@@ -1,8 +1,12 @@
 package entity
 
+import "time"
+
 type Provider struct {
-	Id   ProviderId `json:"id" example:"kuper"`
-	Name string     `json:"name" example:"Купер"`
+	ProviderId ProviderId `db:"provider_id"`
+	Name       string     `db:"name"`
+	CreatedAt  time.Time  `db:"created_at"`
+	UpdatedAt  time.Time  `db:"updated_at"`
 }
 
 type ProviderId string
